Add upgrade path for update from version 6.2.26 [skip ci] See #1

--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
 		<packagedescription><![CDATA[This package includes the free TCPDF library into the WoltLab Suite Core. Thus, a PHP-based PDF creation is possible.]]></packagedescription>
 		<packagename language="de">TCPDF support</packagename>
 		<packagedescription language="de"><![CDATA[Dieses Paket bindet die freie TCPDF-Bibliothek in den WoltLab Suite Core ein. Dadurch wird eine PHP-gestützte PDF-Erstellung möglich.]]></packagedescription>
-		<version>6.2.26</version>
+		<version>6.3.2</version>
 		<date>2019-05-01</date>
 	</packageinformation>
 	
@@ -27,6 +27,11 @@
 	</excludedpackages>
 	
 	<instructions type="install">
+		<!-- files -->
+		<instruction type="file" />
+	</instructions>
+	
+	<instructions type="update" fromversion="6.2.26">
 		<!-- files -->
 		<instruction type="file" />
 	</instructions>
