--- a/package.xml
+++ b/package.xml
@@ -5,8 +5,8 @@
 		<packagedescription><![CDATA[This package includes the free TCPDF library into the WoltLab Suite Core. Thus, a PHP-based PDF creation is possible.]]></packagedescription>
 		<packagename language="de">TCPDF support</packagename>
 		<packagedescription language="de"><![CDATA[Dieses Paket bindet die freie TCPDF-Bibliothek in den WoltLab Suite Core ein. Dadurch wird eine PHP-gestützte PDF-Erstellung möglich.]]></packagedescription>
-		<version>6.3.5</version>
-		<date>2020-05-04</date>
+		<version>6.3.5 pl 1</version>
+		<date>2021-03-14</date>
 	</packageinformation>
 	
 	<authorinformation>
@@ -19,7 +19,7 @@
 	</requiredpackages>
 	
 	<excludedpackages>
-		<excludedpackage version="5.3.0 Alpha 1">com.woltlab.wcf</excludedpackage>
+		<excludedpackage version="6.0.0 Alpha 1">com.woltlab.wcf</excludedpackage>
 	</excludedpackages>
 	
 	<instructions type="install">
@@ -27,7 +27,7 @@
 		<instruction type="file" />
 	</instructions>
 	
-	<instructions type="update" fromversion="6.3.2">
+	<instructions type="update" fromversion="6.3.5">
 		<!-- files -->
 		<instruction type="file" />
 	</instructions>
