--- a/package.xml
+++ b/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package name="com.kittmedia.wsc.tcpdf" xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/tornado/package.xsd">
+<package name="com.kittmedia.wsc.tcpdf" xmlns="http://www.woltlab.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.woltlab.com http://www.woltlab.com/XSD/2019/package.xsd">
 	<packageinformation>
 		<packagename>TCPDF support</packagename>
 		<packagedescription><![CDATA[This package includes the free TCPDF library into the WoltLab Suite Core. Thus, a PHP-based PDF creation is possible.]]></packagedescription>
 		<packagename language="de">TCPDF support</packagename>
 		<packagedescription language="de"><![CDATA[Dieses Paket bindet die freie TCPDF-Bibliothek in den WoltLab Suite Core ein. Dadurch wird eine PHP-gestützte PDF-Erstellung möglich.]]></packagedescription>
-		<version>6.4.2</version>
-		<date>2021-09-01</date>
+		<version>6.5.0</version>
+		<date>2022-10-18</date>
 	</packageinformation>
 	
 	<authorinformation>
@@ -15,7 +15,7 @@
 	</authorinformation>
 	
 	<requiredpackages>
-		<requiredpackage minversion="3.1.13">com.woltlab.wcf</requiredpackage>
+		<requiredpackage minversion="5.5.0">com.woltlab.wcf</requiredpackage>
 	</requiredpackages>
 	
 	<excludedpackages>
@@ -27,12 +27,7 @@
 		<instruction type="file" />
 	</instructions>
 	
-	<instructions type="update" fromversion="6.3.5">
-		<!-- files -->
-		<instruction type="file" />
-	</instructions>
-	
-	<instructions type="update" fromversion="6.3.5 pl 1">
+	<instructions type="update" fromversion="6.4.2">
 		<!-- files -->
 		<instruction type="file" />
 	</instructions>
